feat: CLIN-1879 sonar lint